<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/football" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.scorekeeper.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="0dp"
                android:text="@string/team_eagles"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_eagles_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="0dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#004D40"
                android:onClick="addThreeForTeamEagles"
                android:text="@string/field_goal"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#004D40"
                android:onClick="addTwoForTeamEagles"
                android:text="@string/safety"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#004D40"
                android:onClick="addOneForTeamEagles"
                android:text="@string/extra_point"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#004D40"
                android:onClick="addSixForTeamEagles"
                android:text="@string/touchdown"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.scorekeeper.MainActivity">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="0dp"
                android:text="@string/team_patriots"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/team_patriots_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="0dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#1A237E"
                android:onClick="addThreeForTeamPatriots"
                android:text="@string/field_goal"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#1A237E"
                android:onClick="addTwoForTeamPatriots"
                android:text="@string/safety"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#1A237E"
                android:onClick="addOneForTeamPatriots"
                android:text="@string/extra_point"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#1A237E"
                android:onClick="addSixForTeamPatriots"
                android:text="@string/touchdown"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="#1A237E"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />


</RelativeLayout>
    </ScrollView>